fixed checkbox alignment

--- a/pages/stylesheets/all.scss
+++ b/pages/stylesheets/all.scss
@@ -32,3 +32,7 @@ html.lbh-template > body.lbh-template__body * {
   cursor: pointer;
   background-color: rgb(233, 246, 252);
 }
+
+.govuk-checkboxes__label > p:first-child {
+  margin-top: 0;
+}
